--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "attractions",
   "version": "0.1.0",
   "private": true,
+  "homepage": " https://kirrilll.github.io/Attraction/",
   "dependencies": {
     "@react-three/drei": "^8.8.3",
     "@react-three/fiber": "^7.0.26",
@@ -15,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.137.0",
     "axios": "^0.26.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
@@ -24,6 +26,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
